# File-System

./: .gitignore  CMakeLists.txt  README.md
FileSystem/: CMakeLists.txt  main.cpp  test.cpp
FileSystem/FileSystem/: CMakeLists.txt  FileSystem.h  Utils.h  main.cpp
FileSystem/file_system/: Descriptor.cpp  Descriptor.h  DirectoryEntry.cpp  DirectoryEntry.h  FileSystem.cpp  FileSystem.h  IOSystem.cpp  IOSystem.h
FileSystem/file_system/entities/: BitMap.cpp  BitMap.h  Descriptor.cpp  Descriptor.h  DirectoryEntry.cpp  DirectoryEntry.h  Entity.h
FileSystem/file_system/utils/: BlockParser.h  NumericUtils.h  Utils.h
FileSystem/io_system/: IOSystem.cpp  IOSystem.h  IOSystemUtils.h  IOUtils.h
FileSystem/shell/: Shell.cpp  Shell.h
FileSystem/tests/: doctest.h  test.cpp
IOSystem/: IOSystem.cpp
file_system/: FileSystem.h
file_system/utils/: Utils.h
tests/: test.cpp  test.txt
